[package]
name = "lion328-website"
description = "My awesome website"
version = "0.1.0"
authors = ["Waritnan Sookbuntherng <lion328@hotmail.co.th>"]
categories = ["wasm"]
readme = "README.md"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true

[features]
default = ["wee_alloc"]

[dependencies]
wasm-bindgen = "0.2.45"
wee_alloc = { version = "0.4.2", optional = true }
js-sys = "0.3.22"

[dependencies.web-sys]
version = "0.3.22"
features = [
    "console",
    "Document",
    "Window",
    "Element",
    "KeyboardEvent",
    "HtmlElement",
]

[target."cfg(debug_assertions)".dependencies]
console_error_panic_hook = "0.1.5"

[dev-dependencies]
wasm-bindgen-test = "0.3.28"
futures = "0.3.19"
wasm-bindgen-futures = "0.4.28"
